--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                             <img class = "img-fluid rounded w-100" src = "img/Employee Attendance and Salary Management System.jpg" alt = "">
 
                             <div class = "portfolio-btn bg-primary d-flex align-items-center justify-content-center">
-                                <a href = "img/portfolio-1.jpg" data-lightbox = "portfolio">
+                                <a href = "img/Employee Attendance and Salary Management System.jpg" data-lightbox = "portfolio">
                                     <i class = "fa fa-search-plus" style = "font-size: 60px; color: rgb(148, 163, 184);"></i>
                                 </a>
                             </div>
@@ -414,6 +414,10 @@
                             <div id = "success"></div>
         
                             <div>
+                                <div class = "btn btn-sm btn-outline-primary py-2 text-center" style = "pointer-events: none;">Model-View-Controller (MVC)</div>
+
+                                <br><br>
+
                                 <div class = "btn btn-sm btn-outline-primary py-2 text-center" style = "pointer-events: none;">HTML</div>
                                 <div class = "btn btn-sm btn-outline-primary py-2 text-center" style = "pointer-events: none;">CSS</div>
                                 <div class = "btn btn-sm btn-outline-primary py-2 text-center" style = "pointer-events: none;">JavaScript</div>
@@ -424,7 +428,7 @@
 
                                 <br><br>
 
-                                <h5 class = "font-weight-medium mb-4"><a><i class = "fab fa-github"></i></a></h5>
+                                <h5 class = "font-weight-medium mb-4"><a href = "https://github.com/syafailyas/EmployeeAttendance_CI"><i class = "fab fa-github"></i></a></h5>
                             </div>
                         </div>
                     </div>
@@ -434,7 +438,7 @@
                             <img class = "img-fluid rounded w-100" src = "img/Browte Shop Website.jpg" alt = "">
 
                             <div class = "portfolio-btn bg-primary d-flex align-items-center justify-content-center">
-                                <a href = "img/portfolio-2.jpg" data-lightbox = "portfolio">
+                                <a href = "img/Browte Shop Website.jpg" data-lightbox = "portfolio">
                                     <i class = "fa fa-search-plus" style = "font-size: 60px; color: rgb(148, 163, 184);"></i>
                                 </a>
                             </div>
@@ -452,7 +456,7 @@
 
                                 <br><br>
 
-                                <h5 class = "font-weight-medium mb-4"><a><i class = "fab fa-github"></i></a>&ensp;<a href = "https://browte-batam.com/"><i class = "fa fa-link"></i></a></h5>
+                                <h5 class = "font-weight-medium mb-4"><a href = "https://github.com/syafailyas/Browte"><i class = "fab fa-github"></i></a>&ensp;<a href = "https://browte-batam.com/"><i class = "fa fa-link"></i></a></h5>
                             </div>
                         </div>
                     </div>
@@ -462,7 +466,7 @@
                             <img class = "img-fluid rounded w-100" src = "img/Personal Website.jpg" alt = "">
 
                             <div class = "portfolio-btn bg-primary d-flex align-items-center justify-content-center">
-                                <a href = "img/portfolio-3.jpg" data-lightbox = "portfolio">
+                                <a href = "img/Personal Website.jpg" data-lightbox = "portfolio">
                                     <i class = "fa fa-search-plus" style = "font-size: 60px; color: rgb(148, 163, 184);"></i>
                                 </a>
                             </div>
@@ -480,7 +484,7 @@
 
                                 <br><br>
 
-                                <h5 class = "font-weight-medium mb-4"><a><i class = "fab fa-github"></i></a>&ensp;<a href = "index.html"><i class = "fa fa-link"></i></a></h5>
+                                <h5 class = "font-weight-medium mb-4"><a href = "https://github.com/syafailyas/Personal_Website"><i class = "fab fa-github"></i></a>&ensp;<a href = "index.html"><i class = "fa fa-link"></i></a></h5>
                             </div>
                         </div>
                     </div>
