--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
         <!-- Footer Start -->
         <div class = "container-fluid bg-primary text mt-5 py-5 px-sm-3 px-md-5" style = "color: rgb(203, 213, 225)">
             <div class = "container text-center py-5">
-                <p class = "m-0">Design and Developed by :</p><br>
+                <p class = "m-0">Designed and Developed by :</p><br>
                 <p class = "text font-weight-bold">Syafa Ilyas Al Muzani - 2024</p>
             </div>
         </div>
