--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset = "utf-8">
 
-        <title>Personal Website</title>
+        <title>Syafa Ilyas Al Muzani</title>
 
         <meta content = "width=device-width, initial-scale=1.0" name = "viewport">
         <meta content = "Free HTML Templates" name = "keywords">
