--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                     <div class = "row">
                         <div class = "col-12 mb-2">
                             <ul class = "list-inline mb-4">
-                                <div class = "btn btn-outline-primary m-2" style = "pointer-events: none;">Indonesia - Native</div>
+                                <div class = "btn btn-outline-primary m-2" style = "pointer-events: none;">Indonesian - Native</div>
                                 <div class = "btn btn-outline-primary m-2" style = "pointer-events: none;">English - Professional</div>
                             </ul>
                         </div>
@@ -512,7 +512,7 @@
         <div class = "container-fluid py-5" id = "contact">
             <div class = "container">
                 <div class = "position-relative d-flex align-items-center justify-content-center">
-                    <h1 class = "display text-uppercase text-primary">My Contact and Social Media</h1>
+                    <h1 class = "display text-uppercase text-primary text-center">My Contact and Social Media</h1>
                 </div>
 
                 <div class = "position-relative d-flex align-items-center justify-content-center">
