--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
                                 <p class = "mb-2"><strong>3 October 2022 - 17 February 2023</strong></p>
 
-                                <h5 class = "font-weight-bold mb-1">Software Engineer Internship</h5>
+                                <h5 class = "font-weight-bold mb-1">Software Engineer</h5>
 
                                 <p class = "mb-2"><strong>Formulatrix Indonesia</strong><br><small>Salatiga, Indonesia</small></p>
                                 <p class = "text-justify">Revamped engineering support system (ESS) user interface (UI) for frontend side which enhanced my React.js programming skill.</p>
