--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <h1 class = "display-3 text-uppercase text-primary mb-2" style = "-webkit-text-stroke: 2px #fbbf24;">Syafa Ilyas Al Muzani</h1>
                         <h1 class = "typed-text-output d-inline font-weight-lighter text" style = "color: #fbbf24;"></h1>
 
-                        <div class = "typed-text d-none" style = "text-align: justify;">Bachelor of Computer Science (Software Engineering)</div>
+                        <div class = "typed-text d-none" style = "text-align: justify;">ICT and Computer Science Teacher</div>
 
                         <br><br>
 
@@ -110,11 +110,10 @@
 
                     <div class = "col-lg-7">
                         <p style = "text-align: justify;">
-                            I am a bachelor of computer science (software engineering) recent graduate 
-                            who was also participated in several internship and bootcamp programs. 
-                            Another thing, I am a very responsible person and ready to work. 
-                            I am looking for the opportunity to contribute further for company's success 
-                            where I can leverage what I have learned in the university during four years.
+                            I am an ICT and computer science teacher and a bachelor of computer science (software engineering) graduate 
+                            who was also participated in several internship and bootcamp programs. Another thing, I am a very 
+                            responsible person and ready to work. I am looking for the opportunity to contribute further for 
+                            company's success where I can leverage what I have learned in the university during four years.
                         </p>
 
                         <div class = "row mb-3">
@@ -191,6 +190,26 @@
 
                 <div class = "position-relative d-flex align-items-center justify-content-center">
                     <h1 class = "display text-uppercase text-primary">&nbsp;</h1>
+                </div>
+
+                <div class = "row align-items-center">
+                    <div class = "col-lg-12">
+                        <div id = "success"></div>
+
+                        <h3 class = "mb-4">Working Experience</h3>
+
+                        <div class = "border-left border-primary pt-2 pl-4 ml-2">
+                            <div class = "position-relative mb-4">
+                                <i class = "far fa-dot-circle text-primary position-absolute" style = "top: 2px; left: -32px;"></i>
+
+                                <p class = "mb-2"><strong>24 July 2024 - Present</strong></p>
+
+                                <h5 class = "font-weight-bold mb-1">ICT and Computer Science Teacher</h5>
+
+                                <p class = "mb-2"><strong>Stella Gracia School Pekanbaru</strong><br><small>Pekanbaru, Riau, Indonesia</small></p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class = "row align-items-center">
@@ -341,8 +360,6 @@
                                 <div class = "btn btn-outline-primary m-2" style = "pointer-events: none;">Java</div>
                                 <div class = "btn btn-outline-primary m-2" style = "pointer-events: none;">React.js</div>
                                 <div class = "btn btn-outline-primary m-2" style = "pointer-events: none;">jQuery</div>
-                                <div class = "btn btn-outline-primary m-2" style = "pointer-events: none;">Python</div>
-                                <div class = "btn btn-outline-primary m-2" style = "pointer-events: none;">Next.js</div>
                             </ul>
                         </div>
                     </div>
