--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class = "container">
                 <div class = "row align-items-center">
                     <div class = "col-lg-5 px-5 pl-lg-0 pb-5 pb-lg-0">
-                        <img class = "img-fluid w-100 rounded-circle shadow-sm" src = "img/My Photo Profile.jpeg" alt = "">
+                        <img class = "img-fluid w-100 rounded-circle shadow-sm" src = "img/My Photo Profile.jpg" alt = "">
                     </div>
 
                     <div class = "col-lg-7 text-center text-lg-left">
@@ -105,7 +105,7 @@
 
                 <div class = "row align-items-center">
                     <div class = "col-lg-5 pb-4 pb-lg-0">
-                        <img class = "img-fluid rounded w-100" src = "img/My Photo Profile.jpeg" alt = "">
+                        <img class = "img-fluid rounded w-100" src = "img/My Photo Profile.jpg" alt = "">
                     </div>
 
                     <div class = "col-lg-7">
