--- a/index.html
+++ b/index.html
@@ -67,9 +67,15 @@
                     <div class = "col-lg-7 text-center text-lg-left">
                         <h3 class = "text font-weight-normal mb-3" style = "color: rgb(203, 213, 225);">Hi, my name is</h3>
 
-                        <h1 class = "display-3 text-uppercase text-primary mb-2" style = "-webkit-text-stroke: 2px #fbbf24;">Syafa Ilyas Al Muzani</h1>
-                        <h1 class = "typed-text-output d-inline font-weight-lighter text" style = "color: #fbbf24;"></h1>
+                        <h1 class = "display-3 text-uppercase text-output d-inline font-weight-lighter" style = "color: #fbbf24;">Syafa Ilyas </h1>
 
+                        <br><br>
+
+                        <h1 class = "display-3 text-uppercase text-output d-inline font-weight-lighter" style = "color: #fbbf24;">Al Muzani</h1>
+
+                        <br><br>
+
+                        <h1 class = "typed-text-output d-inline font-weight-lighter text" style = "color: #fbbf24;"></h1>
                         <div class = "typed-text d-none" style = "text-align: justify;">ICT and Computer Science Teacher</div>
 
                         <br><br>
@@ -110,10 +116,11 @@
 
                     <div class = "col-lg-7">
                         <p style = "text-align: justify;">
-                            I am an ICT and computer science teacher and a bachelor of computer science (software engineering) graduate 
-                            who was also participated in several internship and bootcamp programs. Another thing, I am a very 
-                            responsible person and ready to work. I am looking for the opportunity to contribute further for 
-                            company's success where I can leverage what I have learned in the university during four years.
+                            I am a Bachelor of Computer Science (Software Engineering) graduate who have also participated in several 
+                            internship and bootcamp programs and have teaching experience in formal school. Currently working as a 
+                            passionate and dedicated ICT and A Level Computer Science educator by using Cambridge International Curriculum. 
+                            Another thing, I am a very responsible person and ready to work. I am looking for the opportunity to contribute 
+                            further for company's success where I can leverage what I have learned in the university during four years.
                         </p>
 
                         <div class = "row mb-3">
@@ -165,13 +172,13 @@
                                 <p class = "mb-2"><strong>Universiti Teknologi Malaysia (UTM)</strong><br><small>Johor Bahru, Johor, Malaysia</small></p>
 
                                 <p style = "text-align: justify;">
-                                    Final Year Project (FYP) : Employee Attendance and Salary Management System <br>
-                                    Degree++ Programme : Talent and Competency Management<br>
-                                    ∙ UTM Professional Skill : <br>
-                                    &ensp;∙ English Communication Skills (ECS) <br>
-                                    &ensp;∙ Design Thinking for Entrepreneur <br>
-                                    &ensp;∙ Professional Ethics and Integrity <br>
-                                    &ensp;∙ Data Analytics For Organization
+                                    Final Year Project (FYP): Employee Attendance and Salary Management System <br>
+                                    Degree++ Programme: Talent and Competency Management<br>
+                                    UTM Professional Skill: <br>
+                                    ∙ English Communication Skills (ECS) <br>
+                                    ∙ Design Thinking for Entrepreneur <br>
+                                    ∙ Professional Ethics and Integrity <br>
+                                    ∙ Data Analytics For Organization
                                 </p>
                             </div>
                         </div>
@@ -202,11 +209,19 @@
                             <div class = "position-relative mb-4">
                                 <i class = "far fa-dot-circle text-primary position-absolute" style = "top: 2px; left: -32px;"></i>
 
-                                <p class = "mb-2"><strong>24 July 2024 - Present</strong></p>
+                                <p class = "mb-2"><strong>24 July 2024 - June 2025</strong></p>
 
                                 <h5 class = "font-weight-bold mb-1">ICT and Computer Science Teacher</h5>
 
                                 <p class = "mb-2"><strong>Stella Gracia School Pekanbaru</strong><br><small>Pekanbaru, Riau, Indonesia</small></p>
+
+                                <p class = "text-justify">
+                                    Guide junior high student in ICT project. <br>
+                                    Teach A level computer science for senior high 1 and 2 based on Cambridge International Curriculum. <br>
+                                    Guide senior high 2 student to prepare AS Level Cambridge Examination. <br>
+                                    Assess student answer in every test and assessment. <br>
+                                    Support by participating in various school activities and events. 
+                                 </p>
                             </div>
                         </div>
                     </div>
@@ -268,10 +283,8 @@
                                 <p class = "mb-2"><strong>Formulatrix Indonesia</strong><br><small>Salatiga, Indonesia</small></p>
 
                                 <p class = "text-justify">
-                                    Learned C# as one of programming language that is used in formulatrix. <br>
-                                    Learned to create chess class diagram with object-oriented programming (OOP) principle implementation. <br>
-                                    Learned to develop Yu-Gi-Oh! game which enhanced game development knowledge and my programming skill. <br>
-                                    Final Project on Web-Based System Development : Inventory Management System
+                                    Learned C# as one of programming language that is used in formulatrix which enhanced my programming skill. <br>
+                                    Final Project on Web-Based System Development: Inventory Management System
                                 </p>
                             </div>
 
@@ -287,9 +300,7 @@
                                 <p class = "text-justify">
                                    Learned cyber security fundamental knowledge. <br>
                                    Learned network and system. <br>
-                                   Learned security tools and technologies. <br>
-                                   Learned vulnerability scanning and penetration testing. <br>
-                                   Learned log management and log analysis.
+                                   Learned security tools and technologies. 
                                 </p>
                             </div>
                         </div>
@@ -383,6 +394,7 @@
                                 <div class = "btn btn-outline-primary m-2" style = "pointer-events: none;">Microsoft Excel (MS Excel)</div>
                                 <div class = "btn btn-outline-primary m-2" style = "pointer-events: none;">Microsoft Word (MS Word)</div>
                                 <div class = "btn btn-outline-primary m-2" style = "pointer-events: none;">Microsoft PowerPoint (MS PowerPoint)</div>
+                                <div class = "btn btn-outline-primary m-2" style = "pointer-events: none;">Arduino</div>
                             </ul>
                         </div>
                     </div>
@@ -488,7 +500,7 @@
 
                                 <br><br>
 
-                                <h5 class = "font-weight-medium mb-4"><a href = "https://github.com/syafailyas/Browte"><i class = "fab fa-github"></i></a>&ensp;<a href = "https://browte-batam.com/"><i class = "fa fa-link"></i></a></h5>
+                                <h5 class = "font-weight-medium mb-4"><a href = "https://github.com/syafailyas/Browte"><i class = "fab fa-github"></i></a></h5>
                             </div>
                         </div>
                     </div>
@@ -541,7 +553,7 @@
                         <div class = "contact-form text-center">
                             <div id = "success"></div>
 
-                            <p class = "mb-4">Kindly email to my email address (<a href = "mailto: syafailyasalmuzani@gmail.com"><span class = "text-secondary">syafailyasalmuzani@gmail.com</span></a>) if you need my CV!</p>
+                            <p class = "mb-4">Kindly email to my email address (<a href = "mailto: syafailyasalmuzani@gmail.com"><span class = "text-secondary">syafailyasalmuzani@gmail.com</span></a>) if you need my CV resume!</p>
 
                             <div class = "row">
                                 <div class = "col-12 mb-2">
