--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                             I am a Bachelor of Computer Science (Software Engineering) graduate who have also participated in several 
                             internship and bootcamp programs and have teaching experience in formal school. Currently working as a 
                             passionate and dedicated ICT and A Level Computer Science educator by using Cambridge International Curriculum. 
-                            Another thing, I am a very responsible person and ready to work. I am looking for the opportunity to contribute 
+                            Moreover, I am a very responsible person and ready to work. I am looking for the opportunity to contribute 
                             further for company's success where I can leverage what I have learned in the university during four years.
                         </p>
 
@@ -510,7 +510,7 @@
                             <img class = "img-fluid rounded w-100" src = "img/Personal Website.jpg" alt = "">
 
                             <div class = "portfolio-btn bg-primary d-flex align-items-center justify-content-center">
-                                <a href = "img/Personal Website.jpg" data-lightbox = "portfolio">
+                                <a href = "img/Personal Website.png" data-lightbox = "portfolio">
                                     <i class = "fa fa-search-plus" style = "font-size: 60px; color: rgb(148, 163, 184);"></i>
                                 </a>
                             </div>
