--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
 
                     <div class = "col-lg-4 col-md-6 mb-4 portfolio-item third">
                         <div class = "position-relative overflow-hidden mb-2">
-                            <img class = "img-fluid rounded w-100" src = "img/Personal Website.jpg" alt = "">
+                            <img class = "img-fluid rounded w-100" src = "img/Personal Website.png" alt = "">
 
                             <div class = "portfolio-btn bg-primary d-flex align-items-center justify-content-center">
                                 <a href = "img/Personal Website.png" data-lightbox = "portfolio">
