--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
                         <div class = "contact-form text-center">
                             <div id = "success"></div>
 
-                            <p class = "mb-4">Kindly email to my email address (<a href = "mailto: syafailyasalmuzani@gmail.com"><span class = "text-secondary">syafailyasalmuzani@gmail.com</span></a>) if you need my CV resume!</p>
+                            <p class = "mb-4">Kindly email to my email address (<a href = "mailto: syafailyasalmuzani@gmail.com"><span class = "text-secondary">syafailyasalmuzani@gmail.com</span></a>) if you need my CV resume.</p>
 
                             <div class = "row">
                                 <div class = "col-12 mb-2">
