--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                             <div class = "position-relative mb-4">
                                 <i class = "far fa-dot-circle text-primary position-absolute" style = "top: 2px; left: -32px;"></i>
 
-                                <p class = "mb-2"><strong>24 July 2024 - June 2025</strong></p>
+                                <p class = "mb-2"><strong>24 July 2024 - 13 June 2025</strong></p>
 
                                 <h5 class = "font-weight-bold mb-1">ICT and Computer Science Teacher</h5>
 
