--- a/index.html
+++ b/index.html
@@ -216,11 +216,11 @@
                                 <p class = "mb-2"><strong>Stella Gracia School Pekanbaru</strong><br><small>Pekanbaru, Riau, Indonesia</small></p>
 
                                 <p class = "text-justify">
-                                    Guide junior high student in ICT project. <br>
-                                    Teach A level computer science for senior high 1 and 2 based on Cambridge International Curriculum. <br>
-                                    Guide senior high 2 student to prepare AS Level Cambridge Examination. <br>
-                                    Assess student answer in every test and assessment. <br>
-                                    Support by participating in various school activities and events. 
+                                    Guided junior high student in ICT project. <br>
+                                    Taught A level computer science for senior high 1 and 2 based on Cambridge International Curriculum. <br>
+                                    Guided senior high 2 student to prepare AS Level Cambridge Examination. <br>
+                                    Assessed student answer in every test and assessment. <br>
+                                    Supported by participating in various school activities and events. 
                                  </p>
                             </div>
                         </div>
