--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
                         <p style = "text-align: justify;">
                             I am a Bachelor of Computer Science (Software Engineering) graduate who have also participated in several 
                             internship and bootcamp programs and have teaching experience in formal school. Currently working as a 
-                            passionate and dedicated ICT and A Level Computer Science educator by using Cambridge International Curriculum. 
-                            Moreover, I am a very responsible person and ready to work. I am looking for the opportunity to contribute 
-                            further for company's success where I can leverage what I have learned in the university during four years.
+                            passionate and dedicated ICT educator by using Cambridge International Curriculum. Moreover, I am a very 
+                            responsible person and ready to work. I am looking for the opportunity to contribute further for company's 
+                            success where I can leverage what I have learned in the university during four years.
                         </p>
 
                         <div class = "row mb-3">
@@ -222,6 +222,18 @@
                                     Assessed student answer in every test and assessment. <br>
                                     Supported by participating in various school activities and events. 
                                  </p>
+                            </div>
+                        </div>
+
+                        <div class = "border-left border-primary pt-2 pl-4 ml-2">
+                            <div class = "position-relative mb-4">
+                                <i class = "far fa-dot-circle text-primary position-absolute" style = "top: 2px; left: -32px;"></i>
+
+                                <p class = "mb-2"><strong>1 July 2025 - Present</strong></p>
+
+                                <h5 class = "font-weight-bold mb-1">ICT Teacher</h5>
+
+                                <p class = "mb-2"><strong>Mentari Intercultural School Grand Surya</strong><br><small>Jakarta, Indonesia</small></p>
                             </div>
                         </div>
                     </div>
